--- a/styles.css
+++ b/styles.css
@@ -90,10 +90,12 @@
         float: left;
         width: 54%;
         margin-right: 3%;
+        margin-bottom: 15px;
     }
     #puzzle-clues {
         float: left;
         width: 40%;
+        clear: right;
     }
 
     #puzzle-clues1 li{
